# Data-Cleanup

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  planner.md  projectStructure.md  pyproject.toml  requirements.md  requirements.txt
app/: env.py  main.py  models.py
app/graders/: grader_easy.py  grader_hard.py  grader_medium.py
app/tasks/: task_easy.py  task_hard.py  task_medium.py
baseline/: run_baseline.py
data/: clean_easy.csv  clean_hard.csv  clean_medium.csv  raw_easy.csv  raw_hard.csv  raw_medium.csv
